fix(feedback-widget): solution for widget slide-in on mobile (#192)
* testing adding overflow hidden to root

* testing adding width on mobile

* testing fixed

* Fixing mobile widget slide in with intersection observer

* adding in tweaks so the code only runs on mobile

* Fixing icon side panel in icon library being under the feedback widget and not accounting for new sticky nav.

---------

--- a/src/components/feedback-widgets/feedback-widget-sticky/feedback-widget.css
+++ b/src/components/feedback-widgets/feedback-widget-sticky/feedback-widget.css
@@ -15,17 +15,20 @@
 	/* Appearance */
 	position: sticky;
 
-	& .widget_interior-wrapper {
-		/* Layout */
-		inset-block-end: 0;
-		position: absolute;
-	}
-
 	@media (width < 1024px) {
 		/* Layout */
 		inset-block-end: 0;
 		inset-inline-end: 0;
 		margin-inline-end: 0;
+
+		/* Layout */
+		position: fixed;
+	}
+
+	& .widget_interior-wrapper {
+		/* Layout */
+		inset-block-end: 0;
+		position: absolute;
 	}
 
 	& .widget_top-tab {
@@ -95,9 +98,13 @@
 	& .widget_content-wrapper {
 		/* Layout */
 		block-size: auto;
+
+		/* Layout */
 		inline-size: 75--step;
 		max-block-size: calc(100dvh - 15--step);
-		overflow-y: auto;
+
+		/* Layout */
+		overflow-y: hidden;
 		padding-block: 5--step;
 		padding-inline: 3--step;
 		position: relative;
@@ -121,6 +128,12 @@
 
 			/* Appearance */
 			border: none;
+
+			@media (width < 1024px) {
+				/* Layout */
+				block-size: auto;
+				inline-size: 0;
+			}
 		}
 
 		&:is([data-collapsible-active]) {
@@ -131,6 +144,11 @@
 
 			/* Appearance */
 			border: 1px solid #2f7aa7;
+
+			@media (width < 1024px) {
+				/* Layout */
+				inline-size: 75--step;
+			}
 		}
 
 		& h3 {
